--- a/packages/epub_view/pubspec.yaml
+++ b/packages/epub_view/pubspec.yaml
@@ -11,11 +11,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  epubx: ^3.0.0
+  epubx: #^3.0.0
+    path: ../../../epubx.dart
   equatable: ^2.0.3
   html: ^0.15.0
   flutter_html: ^3.0.0-alpha.3
-  scrollable_positioned_list: ^0.3.2
+  scrollable_positioned_list: ^0.2.3
   collection: ^1.16.0
   universal_file: ^1.0.0
 
